# Hacknova5

./: .gitignore  README.md  inventory.json  main.py  migrate_paths.py  pyproject.toml  rewrite.py  rewrite_comms.py  rewrite_stats.py  verify_deduplication.py  verify_resolution.py
agents/: __init__.py  disaster_agent.py
backend/: .gitignore  README.md  app.py  config.py  database.py  force_clean_database.py  migrate_add_users.py  migrate_communications.py  pyproject.toml  requirements.txt  seed_resources.py  seed_vulnerability_zones.py  setup.bat  start_server.bat  weather_scheduler.py
backend/routes/: ai_coordinator.py  alerts.py  analytics.py  auth.py  communications.py  incidents.py  notifications.py  personnel.py  rectify.py  resources.py  sms.py  sos_mesh.py  vulnerability_zones.py  weather.py
backend/utils/: agenti_utils.py  ai_utils.py  analytics_utils.py  file_utils.py  geo_utils.py  notification_utils.py  weather_utils.py
blockchain/: hardhat.config.ts  package-lock.json  package.json  tsconfig.json
core/: remote_webhooks.py
crisis-command-dashboard/: fix1.py  fix_all.py  fix_right.py  package-lock.json  package.json
docs/: desgin_guide.md  system-reference.md  tools-docs.md  ui_master_plan.md
field-responder-ui/: .gitignore  DEMO_GUIDE.md  IMPLEMENTATION_PLAN_RESPONDER_FLOW.md  PWA_GUIDE.md  PWA_SETUP_COMPLETE.md  README.md  USER_MODE_SUMMARY.md  package-lock.json  package.json  test_tomtom.js  test_tomtom2.js  test_tomtom3.js
langchain-docs/: middleware.md  models.md  tools.md
mobile/: app.json  package.json
routes/: agent_route.py  remote_webhook.py  (+3 more)
(+105 files in other folders)
