[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "flask-socketio>=5.6.0",
    "gevent>=25.9.1",
    "gevent-websocket>=0.10.1",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "python-engineio>=4.13.0",
    "python-socketio>=5.16.0",
    "werkzeug>=3.1.5",
]
