[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "flask-socketio==5.3.5",
    "gevent==23.9.1",
    "gevent-websocket==0.10.1",
    "google-genai>=1.62.0",
    "pillow==10.1.0",
    "python-dotenv==1.0.0",
    "python-engineio==4.8.0",
    "python-socketio==5.10.0",
    "requests>=2.32.5",
    "twilio>=9.10.1",
    "werkzeug==3.0.1",
]
